请使用iBlog_vue_new，该部分已弃用。

--- a/views/main/layout.html
+++ b/views/main/layout.html
@@ -83,14 +83,12 @@
                     <div class="title"><span>Other Area</span></div>
                     <p class="line">Some ...</p>
                 </div>
-
-                s
             </div>
         </div>
     </div>
 
     <!--底部-->
-    <footer>Copyright © -- Hizy</footer>
+    <footer>现学现用ing</footer>
 </div>
 
 </body>
