solve numerous bugs

--- a/views/admin/content_index.html
+++ b/views/admin/content_index.html
@@ -28,7 +28,7 @@
             <td>{{ content._id.toString() }}</td>
             <td>{{ content.category.name }}</td>
             <td>{{ content.title }}</td>
-            <td>{{ content.user.name }}</td>
+            <td>{{ content.username }}</td>
             <td>{{ content.description }}</td>
             <!--使用模板 内置的过滤器处理时间 swig - lib - filter下 date方法处理-->
             <!-- 8 * -60 处理时间 偏移 如：系统后台Date.now()取得时间比所在东8区早所以需要进行时间偏移处理8*60分钟-->
