--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -43,6 +43,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">{{ userInfo.username }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="http://localhost:8080">返回博客界面</a></li>
                         <li><a href="/admin/logout">退出</a></li>
                     </ul>
                 </li>
