--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -41,7 +41,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">{{ userInfo.username }} <span class="caret"></span></a>
+                       aria-expanded="false">{{ userName }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="http://localhost:8080">返回博客界面</a></li>
                         <li><a href="/admin/logout">退出</a></li>
